[package]
name = "plonky2-rsa-ring-signature"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.97"
itertools = "0.14.0"
num = { version = "0.4.3", features = ["num-bigint"] }
num-traits = "0.2.19"
num-bigint = "0.4.6"
plonky2 = "1.0.2"
plonky2_u32 = { git = "https://github.com/emlaufer/plonky2-u32.git" }
static_assertions = "1.1.0"
crypto-primes = "0.6"
crypto-bigint = "0.6"
log = { version = "0.4.14"}

# for example programs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
rand = "0.9.0"
